--- a/index.html
+++ b/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Meu Site</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <aside class="esquerda">
+            <h2>Menu Lateral</h2>
+            <ul>
+                <li class="categoria"><a href="#">Opção 1</a></li>
+                <li class="categoria"><a href="#">Opção 2</a></li>
+                <li class="categoria"><a href="#">Opção 3</a></li>
+            </ul>
+        </aside>
+
+        <main class="central">
+            <h2>Conteúdo Principal</h2>
+            <p>Aqui vai o conteúdo central da página.</p>
+            <div class="caixa">
+
+            </div>
+        </main>
+
+        <aside class="direita">
+            <h2>Notícias</h2>
+            <p>Últimas atualizações ou notícias.</p>
+        </aside>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
