Alterações na página bootstrap\index.html

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -35,9 +35,47 @@
                 </div>
             </div>
         </header>
+        <div class="nav-scroller py-1 mb-2"> <!-- p=padding || m=margin || b=bottom || y=top e bottom -->
+            <nav class="nav flex justify-content-between">
+                <a href="#" class="link-secundary">Mundo</a>
+                <a href="#" class="link-secundary">Brasil</a>
+                <a href="#" class="link-secundary">Tecnologia</a>
+                <a href="#" class="link-secundary">Design</a>
+                <a href="#" class="link-secundary">Cultura</a>
+                <a href="#" class="link-secundary">Negócios</a>
+                <a href="#" class="link-secundary">Política</a>
+                <a href="#" class="link-secundary">Opiniões</a>
+                <a href="#" class="link-secundary">Ciência</a>
+                <a href="#" class="link-secundary">Saúde</a>
+                <a href="#" class="link-secundary">Viagens</a>
+            </nav>
+        </div>
 
-        <main>
+        <main class="container">
+            <div>
+                <div class="col-mb-6 px-0">
+                    <h1 class="display-5 fst-italic">Título de uma postagem blog</h1><!-- fst-italic=fonte em italico -->
+                    <p class="lead">
+                        Multiplas linhas de texto que forma o led, informando novos leitores...
+                    </p>
+                    <p class="lead">
+                        <a class="text-white fw-bold text-decoration-none" href="#">
+                            Continue lendo...
+                        </a>
+                    </p>
+                </div>
+            </div>
 
+            <!--<div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="10833ffad8ffc4f3f097a48bc282dc84.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3551.6583119387224!2d-52.60953292365396!3d-27.10406770122795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e4b6a335959fa1%3A0x83b3225143622e02!2sArena%20Cond%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1757532411686!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>--> <!--CONTEUDO PARA TRABALHO-->
         </main>
 
         <footer>
