adicionando cards e título

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <main class="container">
-            <div>
+            <div class="bg-black p-4 mb-4 text-white rounded">
                 <div class="col-mb-6 px-0">
                     <h1 class="display-5 fst-italic">Título de uma postagem blog</h1><!-- fst-italic=fonte em italico -->
                     <p class="lead">
@@ -65,6 +65,58 @@
                     </p>
                 </div>
             </div>
+            <!-- Ínicio Cards -->
+            <!--Inicio do card 1-->
+            <div class="row mb-2">
+                <div class="col">
+                    <div class="card h-100 shadow-sm">
+                        <div class="row g-0">
+                            <div class="col p-4">
+                                <span class="badge bg-primary m-2">Pergunta do dia</span>
+                                <h3 class="card-title">É os guri</h3>
+                                <small class="text-muted">Set 10</small>
+                                <p class="mt-2">
+                                    ou não é?
+                                </p>
+                                <a class="btn btn-link p-0" href="#">Continue lendo</a>
+                            </div>
+                            <div class="col-auto d-none d-lg-block">
+                                <img src="willem.jpg" 
+                                    width="200px"
+                                    height="450px" 
+                                    class="img-fluid rounded"
+                                    alt="aleatoria">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Fim do card 1-->
+                <!--Ínico do card 2-->
+                <div class="col">
+                    <div class="card h-100 shadow-sm">
+                        <div class="row g-0">
+                            <div class="col p-4">
+                                <span class="badge bg-primary m-2">Resposta do dia</span>
+                                <h3 class="card-title">Atualmente</h3>
+                                <small class="text-muted">Set 11</small>
+                                <p class="mt-2">
+                                    está sendo os guri.
+                                </p>
+                                <a class="btn btn-link p-0" href="#">Continue lendo</a>
+                            </div>
+                            <div class="col-auto d-none d-lg-block">
+                                <img src="calango.jpg" width="200px" height="450px" 
+                                    class="img-fluid rounded"
+                                    alt="aleatoria">
+                                    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Fim do card 2-->
+            </div>
+            <!--Fim Cards-->
 
             <!--<div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="10833ffad8ffc4f3f097a48bc282dc84.jpg" alt="Card image cap">
