site supershock finalizado

--- a/bootstrap/site supershock/index.html
+++ b/bootstrap/site supershock/index.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Seção Principal -->
-    <header class="hero-section text-center text-white py-5">
+    <header class="hero-section text-center text-white py-5" id="inicio">
       <div class="container">
         <img 
         class="hero-image rounded-circle mb-4"
@@ -64,7 +64,7 @@
     </header>
     <!-- Historia do desenho -->
     <main>
-      <section class="py-5">
+      <section class="py-5" id="historia">
         <div class="container">
           <div class="row">
             <div class="col-6">
@@ -96,7 +96,7 @@
       </section>
 
        <!-- Historia do Personagem -->
-       <section class="py-5 bg-dark text-white">
+       <section class="py-5 bg-dark text-white" id="personagem">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -122,7 +122,7 @@
       </section>
 
       <!--Curiosidades-->
-      <section class="py-5">
+      <section class="py-5" id="curiosidade">
         <div class="container">
           <div class="row">
             <div class="col-6">
@@ -148,7 +148,7 @@
       </section>
 
       <!--Super Poderes-->
-      <section class="py-5 bg-dark text-white">
+      <section class="py-5 bg-dark text-white" id="poderes">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
